[tool.poetry]
name = "libracecar"
version = "0.0.2"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"

beartype = "^0.20.0"
colorama = "^0.4.6"
equinox = "^0.11.12"
ipython = "^8"
jax = "^0.5.1"
jaxtyping = "^0.2.38"
lark = "^1.2.2"
matplotlib = "^3.10.1"
numpyro = "^0.18.0"
optax = "^0.2.4"
pyroute2 = "^0.8.1"
pytest = "^8.3.5"
pyyaml = "^6.0.2"
termcolor = "^2.5.0"
transforms3d = "^0.4.2"
typeguard = "^4.4.2"
unshare = "^0.22"
numpy = "==1.*"
better-exceptions = "^0.3.3"

[tool.poetry.group.gpu]
optional = true
[tool.poetry.group.gpu.dependencies]
jax = { version = "^0.5.1", extras = ["cuda12"] }

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = "^8"
sphinx-autodoc-typehints = "^3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pyright]
exclude = ["**/result*", ".cache"]
typeCheckingMode = "standard"
